# proximal-galerkin-examples

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  test_dolfinx_examples.yml
code/: README.md  advection_diffusion.cpp  advection_diffusion.py  ex34p.cpp  maximum_principle.cpp  maximum_principle.py  obstacle.cpp  obstacle.py  obstacle_discontinuous.cpp
docker/: Dockerfile
